--- a/PttWebCrawler/packages.config
+++ b/PttWebCrawler/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="HtmlAgilityPack" version="1.11.3" targetFramework="net461" />
   <package id="HtmlAgilityPack.CssSelectors" version="1.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
 </packages>
